# Graver

./: .gitignore  README.md  TODO.md
docs/: architecture.md  job-format.md
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/components/app/: CMakeLists.txt
firmware/components/app/src/: application.cpp
firmware/components/board/: CMakeLists.txt
firmware/components/board/src/: board_hal.cpp
firmware/components/control/: CMakeLists.txt
firmware/components/grbl/: CMakeLists.txt
firmware/components/jobs/: CMakeLists.txt
firmware/components/laser/: CMakeLists.txt
firmware/components/machine/: CMakeLists.txt
firmware/components/motion/: CMakeLists.txt
firmware/components/network/: CMakeLists.txt
firmware/components/shared/: CMakeLists.txt
firmware/components/storage/: CMakeLists.txt
firmware/components/web/: CMakeLists.txt
firmware/components/web/include/web/: web_server.hpp
firmware/components/web/src/: web_api.cpp  web_internal.hpp  web_pages.cpp  web_server.cpp
firmware/components/web/ui/: api.js  app.js  index.html  styles.css  upload.js
firmware/components/web/ui/image/: primitives.js  rasterize.js  stroke_font.js
firmware/config/: machine.example.json  machine.example.yaml
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: main.js
frontend/src/app/: bootstrap.js
frontend/src/styles/: app.css
tools/: README.md
(+66 files in other folders)
